First complete analysis with errors still to be checked