@@ -84,7 +84,7 @@ public class MethodLevelSafety {
 
 	private String convertDash173toDash45(String source) {
 
-		String char173 = new Character((char)173).toString();
+		String char173 =  Character.valueOf((char)173).toString();
 		StringTokenizer st = new StringTokenizer(source,char173,false);
 		String t="";
 		while (st.hasMoreElements()) {
@@ -92,7 +92,7 @@ public class MethodLevelSafety {
 				t = t + st.nextElement();
 			}
 			else {
-				t = t + new Character((char)45).toString() + st.nextElement();
+				t = t + Character.valueOf((char)45).toString() + st.nextElement();
 			}
 		}
 		return t;
