@@ -154,7 +154,7 @@ public class TestTableView {
 		public Row(String pName, String pDescription, int pNumber, String pData, Date pCreate,boolean pTrueFalse) {
 			mName = pName;
 			mDescription = pDescription;
-			mNumber = new Integer(pNumber);
+			mNumber = Integer.valueOf(pNumber);
 			mData = pData;
 			mCreate = pCreate;
 			mTrueFalse = pTrueFalse;
@@ -163,7 +163,7 @@ public class TestTableView {
 		public Row(String pName, String pDescription, int pNumber, String pData, Date pCreate) {
 			mName = pName;
 			mDescription = pDescription;
-			mNumber = new Integer(pNumber);
+			mNumber = Integer.valueOf(pNumber);
 			mData = pData;
 			mCreate = pCreate;
 		}
