@@ -11,15 +11,15 @@ public class TestUnderscore {
 		// TODO Auto-generated method stub
 		
 		for (int i=0 ; i < 255 ; i++) {
-			System.out.println(i+"..."+new Character((char)i));
+			System.out.println(i+"..."+  Character.valueOf((char)i));
 		}
 		System.out.println("----");
-		System.out.println(new Character((char)95));
-		System.out.println(new Character((char)173));
-		System.out.println(new Character((char)45));
+		System.out.println( Character.valueOf((char)95));
+		System.out.println( Character.valueOf((char)173));
+		System.out.println( Character.valueOf((char)45));
 		
 		System.out.println("----");
-		String str1 = "TTT-AAAA"+new Character((char)173)+"BBB";
+		String str1 = "TTT-AAAA"+  Character.valueOf((char)173)+"BBB";
 		System.out.println(str1);
 		String str2 = "TTT-AAAA-BBB";
 		System.out.println(str2);
@@ -40,7 +40,7 @@ public class TestUnderscore {
 	// TODO implement the following
 	private static String convertDash173toDash45(String source) {
 		
-		String char173 = new Character((char)173).toString();
+		String char173 =  Character.valueOf((char)173).toString();
 		StringTokenizer st = new StringTokenizer(source,char173,false);
 		String t="";
 		while (st.hasMoreElements()) {
@@ -48,7 +48,7 @@ public class TestUnderscore {
 				t = t + st.nextElement();
 			}
 			else {
-				t = t + new Character((char)45).toString() + st.nextElement();
+				t = t + Character.valueOf((char)45).toString() + st.nextElement();
 			}
 		}
 		return t;
